# ads_interface

./: CMakeLists.txt
include/ads_interface/: ads_interface.hpp  data_array.hpp  interface_data.hpp  interface_data_container.hpp
lib/: CMakeLists.txt
src/: ads_interface.cpp  interface_data.cpp  interface_data_container.cpp
